--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,1 +1,37 @@
+body{
+    margin: 2%;
+    border: 1px solid rgb(69, 40, 40);
+    background-color: antiquewhite;
+}
 
+#image{
+      line-height:650px;
+      width: 575px;
+      height: 650px;
+      border:5px ridge rgb(29, 24, 24);
+      margin:0 auto;
+      background-color: plum;
+      background-image: url('images/bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color:#FFFFFF;
+      text-align: center;
+      background-size: 100%;
+      margin-bottom:25px;
+      margin-top: 1%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-size: 150%;
+      font-weight: 300;
+}
+
+.preview{
+        width:10%;
+        height: auto;
+        margin-left: 16.5%;
+        border: 9px solid black;
+}
+
+img{
+    width:95%;
+}
